<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Labyrinth</string>
    <string name="hello_world">Labyrinth</string>
    <string name="action_settings">Settings</string>
    <string name="action_accelerometer">Use accelerometer</string>
    <string name="action_gravity">Use gravity sensor</string>
    <string name="action_touch">Use touch input</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="dialog_title">You Win!</string>
    <string name="dialog_text_next">Would you like to try another difficulty?</string>
    <string name="dialog_text_last">Would you like to play again?</string>
    <string name="retry">Yes</string>
    <string name="go_to_mainmenu">Go back to Main Menu</string>
    <string name="go_to_next">Go to next difficulty</string>
    <string name="action_speech">Speech recognition</string>
    <string name="action_mi">Solve yourself</string>
    <string name="no_network">There is no network connection available!</string>
    <string name="finished_in">Finished in: </string>
    <string name="seconds"> seconds!</string>
    <string name="self_solving_canceled">Self solving canceled!</string>
    <string name="stop_self_solving">You can cancel self solving anytime by touching the screen!</string>
    <string name="accelerometer_set">Accelerometer set!</string>
    <string name="accelerometer_not">Accelerometer not available!</string>
    <string name="gravity_set">Gravity sensor set!</string>
    <string name="gravity_not">Gravity sensor not available!</string>
    <string name="touch_set">Touch input set!</string>
    <string name="speech_set">Speech Recognition set!</string>
    <string name="speech_not">Speech Recognition not available!</string>
    <string name="network_error">There was a problem with your network connection!</string>


</resources>
