<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <group
        android:checkableBehavior="single" >
    <item android:id="@+id/action_touch"
        android:title="@string/action_touch"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_accelerometer"
        android:title="@string/action_accelerometer"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_gravity"
        android:title="@string/action_gravity"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_speech"
        android:title="@string/action_speech"
        android:orderInCategory="100"
        android:showAsAction="never"/>
    <item android:id="@+id/action_mi"
         android:title="@string/action_mi"
         android:orderInCategory="100"
         android:showAsAction="never"/>
    </group>

</menu>
